# avs-device-sdk

./: .gitignore  CMakeLists.txt
ACL/src/Transport/: MessageRouter.cpp
RoomieApp/: CMakeLists.txt
RoomieApp/Authorization2/: CMakeLists.txt
RoomieApp/Authorization2/CBLAuthDelegate2/: CMakeLists.txt
RoomieApp/Authorization2/CBLAuthDelegate2/src/: CMakeLists.txt
RoomieApp/src/: CMakeLists.txt
